# name: TestInCohort.test_in_cohort_dynamic
  '
  -- ClickHouse
  
  SELECT events.event AS event 
  FROM events LEFT JOIN (
  SELECT cohortpeople.person_id AS person_id, 1 AS matched 
  FROM cohortpeople 
  WHERE and(equals(cohortpeople.team_id, 420), equals(cohortpeople.cohort_id, 10)) 
  GROUP BY cohortpeople.person_id, cohortpeople.cohort_id, cohortpeople.version 
  HAVING ifNull(greater(sum(cohortpeople.sign), 0), 0)) AS in_cohort__10 ON equals(in_cohort__10.person_id, events.person_id) 
  WHERE and(equals(events.team_id, 420), ifNull(equals(in_cohort__10.matched, 1), 0), equals(events.event, %(hogql_val_0)s)) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1
  
  -- HogQL
  
  SELECT event 
  FROM events LEFT JOIN (
  SELECT person_id, 1 AS matched 
  FROM raw_cohort_people 
  WHERE equals(cohort_id, 10) 
  GROUP BY person_id, cohort_id, version 
  HAVING greater(sum(sign), 0)) AS in_cohort__10 ON equals(in_cohort__10.person_id, person_id) 
  WHERE and(equals(in_cohort__10.matched, 1), equals(event, '018c6a03-e2f4-0000-1b43-0b8b068eedf9')) 
  LIMIT 100
  '
---
# name: TestInCohort.test_in_cohort_static
  '
  -- ClickHouse
  
  SELECT events.event AS event 
  FROM events LEFT JOIN (
  SELECT person_static_cohort.person_id AS person_id, 1 AS matched 
  FROM person_static_cohort 
  WHERE and(equals(person_static_cohort.team_id, 420), equals(person_static_cohort.cohort_id, 11))) AS in_cohort__11 ON equals(in_cohort__11.person_id, events.person_id) 
  WHERE and(equals(events.team_id, 420), ifNull(equals(in_cohort__11.matched, 1), 0)) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1
  
  -- HogQL
  
  SELECT event 
  FROM events LEFT JOIN (
  SELECT person_id, 1 AS matched 
  FROM static_cohort_people 
  WHERE equals(cohort_id, 11)) AS in_cohort__11 ON equals(in_cohort__11.person_id, person_id) 
  WHERE equals(in_cohort__11.matched, 1) 
  LIMIT 100
  '
---
# name: TestInCohort.test_in_cohort_strings
  '
  -- ClickHouse
  
  SELECT events.event AS event 
  FROM events LEFT JOIN (
  SELECT person_static_cohort.person_id AS person_id, 1 AS matched 
  FROM person_static_cohort 
  WHERE and(equals(person_static_cohort.team_id, 420), equals(person_static_cohort.cohort_id, 12))) AS in_cohort__12 ON equals(in_cohort__12.person_id, events.person_id) 
  WHERE and(equals(events.team_id, 420), ifNull(equals(in_cohort__12.matched, 1), 0)) 
  LIMIT 100 
  SETTINGS readonly=2, max_execution_time=60, allow_experimental_object_type=1
  
  -- HogQL
  
  SELECT event 
  FROM events LEFT JOIN (
  SELECT person_id, 1 AS matched 
  FROM static_cohort_people 
  WHERE equals(cohort_id, 12)) AS in_cohort__12 ON equals(in_cohort__12.person_id, person_id) 
  WHERE equals(in_cohort__12.matched, 1) 
  LIMIT 100
  '
---
